--- a/index.html
+++ b/index.html
@@ -2,16 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Modsen Art Museum</title>
-    <style>
-      html, body {
-        font-family: 'Lexend Deca', sans-serif;
-        margin: 0;
-        padding: 0;
-      }
-    </style>
+    <link type="text/css" rel="stylesheet" href="/src/style.scss" />
   </head>
   <body>
     <div id="root"></div>
